Separando html e javascript

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Projeto Sócio-econômico para disciplina de Sistemas de Informação, visando analisar o perfil sócio econômico dos alunos do 2º semestre de análise e desenvolvimento de sistemas",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon server.js"
+    "start": "nodemon ./js/server.js"
   },
   "repository": {
     "type": "git",
